# dex

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json  token.sh
scripts/: dex_pool_generate.sh  generate_did.sh
src/dex_pool/: Cargo.toml  dex_pool.did
src/dex_pool/src/: lib.rs  types.rs  upgrade.rs  user.rs
src/dex_pool/src/api/: user_info.rs
src/icp_dex_backend/: Cargo.toml  icp_dex_backend.did  ledger.did.js
src/icp_dex_backend/src/: lib.rs  memory.rs  state_handler.rs
src/icp_dex_backend/src/api/: user_info.rs
src/icp_dex_frontend/: index.html  package.json  tailwind.config.js
src/icp_dex_frontend/src/: App.jsx  AppRoutes.jsx  Store.js  TextData.js  index.css  main.jsx
src/icp_dex_frontend/src/CustomSpan/: GradientSpan.jsx
src/icp_dex_frontend/src/Modals/: ConnectWallet.jsx  Dialouge.jsx  ModalsSvgData.jsx  SearchToken.jsx  SelectTokensForPools.jsx  Swap.jsx  SwapSetting.jsx  TransactionComplete.jsx
src/icp_dex_frontend/src/buttons/: BlueGradientButton.jsx  BorderGradientButton.jsx  BorderGradientTransparentButton.jsx  GradientButton.jsx  ImpactButton.jsx
src/icp_dex_frontend/src/displayBoxes/: PoolInfoBox.jsx
src/icp_dex_frontend/src/hooks/: useAlert.js
src/icp_dex_frontend/src/navbar/: MobileNavbar.jsx  Navbar.jsx
src/icp_dex_frontend/src/pages/: CreatePoolStepsPage.jsx  HomePage.jsx  LandingPage.jsx  PoolPage.jsx  PortfolioPage.jsx  SwapPage.jsx  TransactionPage.jsx
src/icp_dex_frontend/src/reducer/: Alert.js  PoolCreation.js  RootReducer.js
src/icp_dex_frontend/src/tables/: Swapping.jsx  (+4 more)
(+21 files in other folders)
