[package]
name = "icp_dex_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
candid-extractor = "0.1.2"
ic-stable-structures = "0.6.4"
ic-cdk-macros = "0.13.2"
serde = "1.0.200"
ciborium = "0.2.2"
serde_bytes = "0.11.14"

